<resources>
    <string name="app_name">junimoApp</string>
    <string name="settings">Settings</string>
    <string name="event_lottery">Event Lottery</string>
    <string name="back_to_home">← Back</string>
    <string name="admin">Admin</string>
    <string name="search_profiles">Search Profiles</string>
    <string name="search">Search</string>
    <string name="organize_alphabetical_order_u2191">Organize : Alphabetical Order ↑</string>
    <string name="browse_delete_profiles">Browse/Delete Profiles</string>
    <string name="browse_remove_organizers">Browse/Remove Organizers</string>
    <string name="browse_images">Browse Images</string>
    <string name="browse_events">Browse Events</string>
    <string name="search_events_label">Search Events</string>
    <string name="browse_notification_log">Browse Notification Log</string>
    <string name="notification_log_title">Notification Log</string>
    <string name="sent_by">Sent by: </string>
    <string name="no_notifications_found">No notifications found.</string>
    <string name="event_details_admin">Event Details</string>
    <string name="comments_header">Comments</string>
    <string name="remove_comment">Remove Comment</string>
    <string name="remove_comment_confirm">Are you sure you want to remove this comment? </string>
    <string name="no_comments">No comments on this event.</string>
    <string name="organizer_id_label">Organizer ID: </string>
    <string name="description_label">Description: </string>
    <string name="location_label">Location: </string>
    <string name="date_label">Date: </string>
    <string name="browse_images_title"> Browse Images</string>
    <string name="remove_image">Remove Image</string>
    <string name="remove_image_confirm">Are you sure you want to remove this image? </string>
    <string name="no_image">No image</string>
    <string name="image_type_poster">Poster</string>
    <string name="image_type_profile">Profile Photo</string>
    <string name="event_title_label">Event: </string>
    <string name="user_label">User: </string>
    <string name="search_events">Search Events</string>
    <string name="event_tag_prompt">Select Event Tag</string>
    <string-array name="event_tags">
        <item>None</item>
        <item>Athletics</item>
        <item>Entertainment</item>
        <item>Social</item>
        <item>Professional</item>
        <item>Education</item>
    </string-array>
    <string name="sys_description">Join waiting lists for popular community events through our lottery system</string>
    <string name="add">Add</string>
    <string name="create_new_event">Create New Event</string>
    <string name="spec_title">Title*</string>
    <string name="description">Description</string>
    <string name="spec_date">Date*</string>
    <string name="spec_location">Location*</string>
    <string name="spec_max_capacity">Max Capacity*</string>
    <string name="registration_period">Registration Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="waiting_list_limit">Waiting List Limit</string>
    <string name="spec_price">Price*</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="generate">Generate</string>
    <string name="spec_geo_location">Geo Location*</string>
    <string name="private_event_invite_only_no_qr_code">Private Event (invite-only, no QR code)</string>
    <string name="poster">Poster</string>
    <string name="insert_image">Insert Image</string>
    <string name="fields_with_must_be_filled_in">Fields with * must be filled in</string>
    <string name="preview">Preview</string>
    <string name="publish">Publish</string>
    <string name="cancel">Cancel</string>
    <string name="organizer">Organizer</string>
    <string name="event">Event</string>
    <string name="start_lottery">Start Lottery</string>
    <string name="entrants_invited_to_apply">• Entrants invited to apply</string>
    <string name="cancelled_entrants">• Cancelled entrants</string>
    <string name="enrolled_entrants">• Enrolled entrants</string>
    <string name="event_preview">Event Preview</string>
    <string name="title">Title</string>
    <string name="registration">Registration</string>
    <string name="event_date">Event Date</string>
    <string name="location">Location</string>
    <string name="max_capacity">Max Capacity</string>
    <string name="price">Price</string>
    <string name="geo_location">Geo Location</string>
    <string name="back">Back</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save_changes">save changes</string>
    <string name="delete_account">delete account</string>
    <string name="event_name">Event Name</string>
    <string name="add_a_description_develop_the_ultimate_core_strength_and_coordination_with_pilates_movement">Add a description: Develop the ultimate core strength and coordination with Pilates movement...</string>
    <string name="event_details">Event Details</string>
    <string name="event_location_address">Event location address</string>
    <string name="registration_details">Registration Details</string>
    <string name="capacity">Capacity</string>
    <string name="current_status">Current Status</string>
    <string name="join_waitlist">join waitlist</string>
    <string name="leave_waitlist">leave waitlist</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="post_comment">Post Comment</string>
    <string name="view_booking_history">View Event History</string>
    <string name="event_history">Event History</string>
    <string name="past_events">Past Events</string>
    <string name="map_of_entrants">Map of Entrants</string>
    <string name="click_to_enlarge">Click To Enlarge</string>
</resources>