<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_lottery"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organizer"
                    android:textColor="#D2D2D2"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add"
                android:src="@android:drawable/ic_input_add"
                android:tint="#FFFFFF" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/settings"
                android:src="@android:drawable/ic_menu_manage"
                android:tint="#FFFFFF" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#2A2A2A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/back_to_home"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/back_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/map_of_entrants"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8C8C8C" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_enlarge"
        android:textSize="15sp"
        android:textColor="#D2D2D2"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="200dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardElevation="4dp">

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/list_of_entrants"
        android:layout_marginStart="5dp"
        />

</LinearLayout>